# onde-resilience

./: .gitignore  Dockerfile.dev  README.md  docker-compose.yml  setup.ps1
.devcontainer/: devcontainer.json
android/: build.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/onde/resilience/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
core/: Cargo.toml
core/.cargo/: config.toml
core/crates/dtn-router/: Cargo.toml
core/crates/dtn-router/src/: lib.rs
core/crates/llama-bind/: Cargo.toml
core/crates/llama-bind/src/: lib.rs
core/crates/llm-inference/: Cargo.toml
core/crates/llm-inference/src/: lib.rs
core/crates/whisper-stt/: Cargo.toml
core/crates/whisper-stt/src/: lib.rs
core/crates/zim-parser/: Cargo.toml
core/crates/zim-parser/src/: lib.rs
core/src/: lib.rs
core/src/ai/: mod.rs
core/src/crypto/: mod.rs
core/src/network/: mod.rs
core/src/node/: mod.rs
core/src/protocol/: mod.rs
core/src/storage/: mod.rs
core/tests/: integration_e2e.rs
onde/simulation/results/: simulation_report.json
simulation/: mesh_sim.py
ui/src/: index.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/web/: package.json
