[package]
name = "onde-ui"
version = "0.2.0"
edition = "2021"

[lib]
name = "onde_ui_lib"
path = "src/lib.rs"

[[bin]]
name = "onde-ui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
onde-core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
opt-level = "z"
lto = true
