[package]
name = "whisper-stt"
version = "0.2.0"
edition = "2021"
description = "Whisper.cpp Speech-to-Text bindings for ONDE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["mock"]
mock = []  # Simulated STT for testing without model

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }